[gd_scene load_steps=8 format=3 uid="uid://cxco7l6jgsf2"]

[ext_resource type="Script" uid="uid://bbq3kiis6024t" path="res://scripts/core/game_manager.gd" id="1_bw6k5"]
[ext_resource type="Script" uid="uid://pxehq7pkni7q" path="res://addons/simple_card_pile_ui/card_pile_ui.gd" id="2_y3j0m"]
[ext_resource type="PackedScene" uid="uid://bjl8ts01jetv1" path="res://scenes/card_ui.tscn" id="3_rurhu"]
[ext_resource type="Script" uid="uid://b3vqhxkwjhf6m" path="res://scripts/core/combination_dropzone.gd" id="4_kk2rg"]
[ext_resource type="Script" uid="uid://cuitqesw4sgw4" path="res://scripts/core/player_stats.gd" id="5_y3j0m"]

[sub_resource type="Curve" id="Curve_b5spy"]
_data = [Vector2(0, 0), 0.0, 1.4, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_utbpp"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="GameScene" type="Node2D"]

[node name="Background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_bw6k5")

[node name="CardPileUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_y3j0m")
json_card_database_path = "res://data/cards.json"
json_card_collection_path = "res://data/collection.json"
extended_card_ui = ExtResource("3_rurhu")
draw_pile_position = Vector2(200, 600)
hand_pile_position = Vector2(640, 600)
discard_pile_position = Vector2(1080, 600)
max_hand_size = 7
max_hand_spread = 800
hand_rotation_curve = SubResource("Curve_b5spy")
hand_vertical_curve = SubResource("Curve_utbpp")
metadata/_custom_type_script = "uid://pxehq7pkni7q"

[node name="CombinationDropzone" type="Control" parent="."]
modulate = Color(0.804596, 0.934213, 0.842941, 1)
self_modulate = Color(0.589122, 0.477859, 0.620659, 1)
layout_mode = 3
anchors_preset = 0
offset_left = 84.0
offset_top = 114.0
offset_right = 124.0
offset_bottom = 154.0
script = ExtResource("4_kk2rg")
metadata/_custom_type_script = "uid://4iorfpt6j2me"

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource("5_y3j0m")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EnemyImage" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EnemyName" type="Label" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="EnemyHealth" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_right = 4.0
offset_bottom = 27.0

[node name="EnemyDescription" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreDisplay" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0

[node name="TurnsDisplay" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0

[node name="PlayerHealth" type="ProgressBar" parent="UI"]
offset_right = 4.0
offset_bottom = 27.0

[node name="ActionButtons" type="HBoxContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="EndTurnButton" type="Button" parent="UI/ActionButtons"]
layout_mode = 2

[node name="UseItemButton" type="Button" parent="UI/ActionButtons"]
layout_mode = 2

[node name="CombinationResult" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GameOverPanel" type="Panel" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="VictoryPanel" type="Panel" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0
